# opsly

./: .dockerignore  .env.example  .env.local.example  .eslintrc.json  .gitignore  .npmrc  .openclaw.md  .opencode.json  .opsly-drive-config.json  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  Dockerfile.hermes  Dockerfile.local-worker  HANDOFF.md  PARALLEL-EXECUTION-STATUS.md  README.md  ROADMAP.md  SPRINT-TRACKER.md  TODO.md  VALIDATION-REPORT-2026-04-12.md  VISION.md  commitlint.config.js  context  doppler.env  doppler.json  e2e-proof.txt  eslint.config.mjs  package-lock.json  package.json  pnpm-workspace.yaml  skills  turbo.json
.agents/: README.md
.claude/: CLAUDE.md  README.md  setup.sh
.codex/: CODEX.md
.cursor/: .gitignore  .monitoring-commands.sh  .test-monitors.sh  extensions.json  settings.json
.githooks/: README.md  commit-msg  post-commit  pre-commit  pre-push
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README-github-templates.md  VISION.md  copilot-instructions.md  pull_request_template.md  system_state.json
.hermes/: HERMES.md
.husky/: pre-commit  pre-push
.n8n/: README.md  n8n-import.sh  setup.sh
tools/cli/: README.md  __init__.py  agent.py  autonomy_orchestrator.py  autonomy_types.py  client.py  deployment_pipeline.py  docker_provisioner.py  guardian.py  main.py  memory_store.py  mode_manager.py  multi_orchestrator.py  orchestrator_bridge.py  pyproject.toml  research_client.py  self_evolver.py  smart_selector.py  task_coordinator.py  ui.py
tools/cli/providers/: __init__.py  anthropic_provider.py  factory.py  openai_provider.py
(+2107 files in other folders)
