[project]
name = "opsly-hacker-cli"
version = "0.1.0"
description = "Hacker-style terminal client for Opsly MCP server"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "mcp>=1.0.0",
  "PyYAML>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.5",
]

[project.scripts]
opsly = "tools.cli.main:app"
